This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

13-Oct-2009 (Gnomi)
  - Deactivate tls_trustdirectory per default as /etc/ssl/certs may contain
    a large number of certificates on usual installations (which are not
    related to client certificates) and GnuTLS clients have a problem with
    that (too large handshake data). Whoever wants to use client
    certificates shall set it up explicitely.
    (configure)
  - Updated Avalon settings file.
    (settings/avalon)

05-Oct-2009 (Zesstra)
  - prepend '/' in get_dir() in plain mode for entries in the root directory,
    if paths are requested by GETDIR_PATH. They were omitted until now. (#501)
    (files.c)

04-Oct-2009 (Zesstra)
  - Use CRYPTO_set_mem_functions() to register function pointers to our own
    allocator functions in openssl.
    (pkg-openssl.c)

16-Sep-2009 (Zesstra)
  - 'status/malloc' commands include now the allocator in use (Patch from
      Xtian, #672)
    (slaballoc.c, xptmalloc.c, smalloc.c)

12-Sep 2009 (Fuchur)
  - fix some refcounting issues (interpret.c)

08-Sep 2009 (Zesstra)
  - Get permanently allocated memory in xml_pkg_strdup(), which is not
    subject to the GC to prevent some nasty problems.
    (pkg-xml2.c)

04-Sep-2009 (Zesstra)
  - Fixed initialization of libxml2 (#671).
    LIBXML_TEST_VERSION already allocates memory, so xmlMemSetup() has to be
    called before that macro. Otherwise crashes may occur.
    (pkg-xml2.c)
  - Use the 'permanent' variants of our allocation function, because the
    memory used by libxml2 should not be subject to the garbage collector.
    (pkg-xml2.c, pkg-iksemel.c)

01-Sep-2009 (Gnomi)
  - Fixed a crash in symbol_function with very long function names
    by removing the necessity of an alloca and giving make_shared_identifier
    the length of the identifier as an additional parameter.
    (lex.c, prolang.y)

03-Aug-2009 (Gnomi)